ADD line-through + color grey for item when checked

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,5 +3,6 @@
 
 <ul>
   <li *ngFor="let list of lists" style="list-style: none">
-    <a [routerLink]="['/list-details', list.id]">{{ list.title }}</a></li>
+    <a [routerLink]="['/list-details', list.id]">{{ list.title }}</a>
+  </li>
 </ul>
