ADD list-new.component.ts : add empty list and navigate to library of todo lists

--- a/src/app/list-new/list-new.component.html
+++ b/src/app/list-new/list-new.component.html
@@ -1,1 +1,6 @@
-<p>list-new works!</p>
+<div>
+  <label> Nouvelle liste : </label>
+  <input id="title" type="text" [formControl]="title">
+  <button (click)="createList()">Créer</button>
+</div>
+
