--- a/src/app/list-details/list-details.component.html
+++ b/src/app/list-details/list-details.component.html
@@ -1,4 +1,5 @@
 <h1>{{ list.title }}</h1>
+<button (click)="deleteList()">Supprimer liste</button>
 <hr>
 <label> Nouvelle tache : </label>
 <input id="name" type="text" [formControl]="name">
