--- a/src/app/list-details/list-details.component.html
+++ b/src/app/list-details/list-details.component.html
@@ -1,5 +1,11 @@
-<h1>{{ list.title }}</h1>
-<button (click)="deleteList()">Supprimer liste</button>
+<div>
+  <h1>{{ list.title }}</h1>
+  <button mat-icon-button color="warn" (click)="deleteList()">
+    <mat-icon>delete</mat-icon>
+  </button>
+</div>
+
+
 <hr>
 <label> Nouvelle tache : </label>
 <input id="name" type="text" [formControl]="name">
@@ -7,5 +13,7 @@
 <div *ngFor="let item of list.items">
   <input type="checkbox" [checked]="item.done" (click)="changeCheck(item.id)">
   <span>{{ item.name }}</span>
+  <p>{{item.id}}</p>
+  <button (click)="deleteItem(item.id)">Effacer</button>
 </div>
 
