MOVE deleteList() to list component

--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -1,1 +1,10 @@
+.lists {
+  display: flex;
+  flex-direction: column-reverse;
+}
 
+mat-card {
+  display: inline-flex;
+  align-items: baseline;
+  row-gap: 30px;
+}
