--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,21 +1,23 @@
-<section>
+<header>
   <h1>Mes listes de taches</h1>
-  <form>
-    <mat-form-field>
-      <mat-label>Nouvelle liste</mat-label>
-      <input matInput id="title" type="text" [formControl]="title">
-      <mat-error *ngIf="title.hasError('required')">
-        Attribuer un nom
-      </mat-error>
-    </mat-form-field>
-    <button mat-icon-button (click)="createList()">
-      <mat-icon>add</mat-icon>
-    </button>
-  </form>
-</section>
-<div class="lists">
-<mat-card *ngFor="let list of lists">
-  <a class="items" mat-line [routerLink]="['/list-details', list.id]">{{ list.title }}</a>
-  <button class="items" mat-mini-fab color="warn" (click)="deleteList(list.id)"><mat-icon>delete</mat-icon></button>
+  <mat-form-field>
+    <input matInput placeholder="Nouvelle liste" id="title" type="text" [formControl]="title" #newlistinput>
+    <mat-error *ngIf="title.hasError('required')">
+      Attribuer un nom
+    </mat-error>
+  </mat-form-field>
+  <button  [disabled]="newlistinput.value == ''" mat-raised-button color="primary" (click)="createList(); newlistinput.value = ''">
+    <mat-icon>add</mat-icon>
+  </button>
+</header>
+
+<mat-card *ngIf="lists.length > 0">
+  <mat-nav-list >
+    <mat-list-item *ngFor="let list of lists">
+      <a class="items" mat-line [routerLink]="['/list-details', list.id]">{{ list.title }}</a>
+      <button class="items" mat-mini-fab color="warn" (click)="deleteList(list.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-list-item>
+  </mat-nav-list>
 </mat-card>
-</div>
