--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,2 +1,6 @@
-<p>Erreur 404</p>
-<button (click)="goToHomepage()">Retour à l'accueil</button>
+<mat-card>
+  <mat-card-title>Erreur 404</mat-card-title>
+  <mat-card-subtitle>La page que vous recherchez n'existe pas</mat-card-subtitle>
+  <button mat-raised-button color="primary" (click)="goToHomepage()">Retour à l'accueil</button>
+</mat-card>
+
