Prepare to deploy on Heroku

--- a/src/app/list-details/list-details.component.html
+++ b/src/app/list-details/list-details.component.html
@@ -13,10 +13,9 @@
 <mat-card>
   <mat-list>
     <mat-list-item *ngFor="let item of list.items">
-      <mat-checkbox [checked]="item.done != null ? item.done : false " (click)="changeCheck(item.id)">
+      <mat-checkbox color="primary" [checked]="item.done != null ? item.done : false " (click)="changeCheck(item.id)">
         <span>{{ item.name }}</span>
       </mat-checkbox>
-<!--      TODO align button to the right-->
       <button class="button-end" mat-mini-fab color="warn" aria-label="delete item" (click)="deleteItem(item.id)">
         <mat-icon>cancel</mat-icon>
       </button>
